# git-tool

./: .gitbook.yaml  .gitignore  .travis.yml  Autocomplete.ps1  CODE_OF_CONDUCT.md  Cargo.toml  Config.ps1  Cross.toml  Git-Tool.psd1  Git-Tool.psm1  LICENSE  README.md  SUMMARY.md  build.rs  code_of_conduct.md  codecov.yml  flake.nix  git-tool.yml  go.mod  go.sum  package-lock.json
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/actions-rs/: grcov.yml
.github/issue_template/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: azure-static-web-apps-brave-meadow-00ba9e303.yml  azure-static-web-apps-victorious-mud-019b1c203.yml  changelog.yml  docs-website.yml  fuzz.yml  go-release.yml  go-test.yml  go.yml  nix.yml  release-changelog.yml  release.yml  rust-release.yml  rust-test.yml  security_audit.yml  test.yml
Functions/: Autocomplete.ps1  Get-CurrentRepo.ps1  Get-DevDirectory.ps1  Get-GitIgnore.ps1  Get-Repo.ps1  Get-RepoInfo.ps1  Get-RepoNamespaces.ps1  Get-Repos.ps1  New-Repo.ps1  Open-Repo.ps1  Set-DevDirectory.ps1
assets/: git-tool.exe.manifest
ci/: azure-pipelines.yml  build-all.ps1
cmd/git-tool/: main.go
cmd/gt/: main.go
commands/: config.md  development.md  repos.md  setup.md
config/: apps.md  config.example.unix.yml  config.example.win32.yml  features.md  overview.md
docs/: .gitignore  README.md  SUMMARY.md  package-lock.json  package.json
docs/.vuepress/: client.ts  config.ts
docs/commands/: README.md  config.md  dev.md  overview.md  repos.md  scratch.md  setup.md  tasks.md
docs/config/: README.md  apps.md  features.md  registry.md  services.md  templates.md
docs/guide/: README.md  faq.md  getting-started.md  github.md  installation.md  migrating-v3.md  reporting-errors.md  updates.md  usage.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/commands/: common-options
fuzz/corpus/completion/: app-target-env
fuzz/corpus/config/: literal-dollar-path  nested-config
fuzz/corpus/git_operations/: branch-transitions
fuzz/corpus/gitignore/: managed-section  no-section
fuzz/corpus/identifier/: trimmed-relative-path
fuzz/corpus/registry/: app-entry  service-entry
fuzz/corpus/repo_config/: tasks-and-worktree
fuzz/corpus/search/: unicode-exact-match
fuzz/corpus/tasks/: branch-transitions
fuzz/corpus/templates/: conditional-context  control-character-action  left-trim-after-non-ascii  non-ascii-after-inner-comment-syntax  unicode-action  unterminated-action
fuzz/corpus/worktree/: detached  two-worktrees
fuzz/fuzz_targets/: commands.rs  common.rs  completion.rs  config.rs  git_operations.rs  gitignore.rs  identifier.rs  registry.rs  repo_config.rs  search.rs  tasks.rs  templates.rs  worktree.rs
guide/: getting-started.md  github.md  installation.md  usage.md
infra/: .terraform.lock.hcl  dns.tf  main.tf  providers.tf  resourcegroup.tf  site.tf
internal/app/: app.go  app_suite_test.go  apps.go  apps_test.go  branch.go  branch_test.go  complete.go  config.go  config_add.go  config_add_test.go  config_list.go  config_list_test.go  config_test.go  get-gitignore.go  gitignore.go  gitignore_test.go  helpers_test.go  info.go  info_test.go  list-apps.go  list-repos.go  list-services.go  list.go  list_test.go  new-repo.go  new.go  new_test.go  open-app.go  open.go  open_test.go  repo-info.go  repos.go  scratch.go  scratch_test.go  services.go  services_test.go  shell_init.go  shell_init_test.go  update.go  utils.go
pkg/githosts/: github.go  host.go  registry.go  utils.go
pkg/models/: app.go  repo.go  scratchpad.go  service.go  target.go
registry/apps/: aider.yaml  amp.yaml  bash.yaml  claude.yaml  codex.yaml  copilot-cli.yaml  cursor.yaml  emacs.yaml  explorer.yaml  finder.yaml  fleet.yaml  gemini.yaml  helix.yaml  intellij.yaml  nano.yaml  neovim.yaml  opencode.yaml  powershell-admin.yaml  powershell.yaml  pwsh.yaml  qwen.yaml  sublime-text.yaml  vim.yaml  visualstudio.yaml  vscode-insiders.yaml  vscode.yaml  windsurf.yaml  zed.yaml  zsh.yaml
registry/services/: azure-devops.yaml  bitbucket.yaml  codeberg.yaml  gitea.yaml  gitee.yaml  github-http.yaml  github-public.yaml  github-ssh.yaml  github.yaml  gitlab.yaml  sourcehut.yaml
scripts/: bash_autocomplete  fuzz  modd.conf  psh_autocomplete.ps1  watch_tests  watch_tests.ps1  zsh_autocomplete
src/: lib.rs  macros.rs  main.rs  update.rs
src/commands/: apps.rs  auth.rs  branch.rs  clone.rs  complete.rs  config.rs  doctor.rs  fix.rs  helpers.rs  ignore.rs  info.rs  list.rs  mod.rs  new.rs  open.rs  prune.rs  remove.rs  rename.rs  scratch.rs  services.rs  setup.rs  shell_init.rs  switch.rs  task.rs  temp.rs  trust.rs  update.rs  worktree.rs
src/completion/: completer.rs  mod.rs  parser.rs  setup.rs
src/console/: input.rs  mod.rs  output.rs  prompt.rs
src/core/: app.rs  auth.rs  builder.rs  config.rs  core.rs  features.rs  files.rs  http.rs  identifier.rs  input.rs  launcher.rs  mod.rs  output.rs  prompt.rs  repo.rs  resolver.rs  scratchpad.rs  service.rs  target.rs  templates.rs
src/engine/: analytics.rs  app.rs  auth.rs  branch.rs  builder.rs  config.rs  features.rs  http.rs  identifier.rs  launcher.rs  mod.rs  prompt.rs  repo.rs  repo_config.rs  resolver.rs  scratchpad.rs  service.rs  target.rs  templates.rs  worktree.rs
src/errors/: base64.rs  hyper.rs  keyring.rs  mod.rs  nix.rs  reqwest.rs  serde.rs  std_io.rs  utf8.rs
src/fs/: mod.rs
src/git/: add.rs  branch.rs  checkout.rs  clone.rs  cmd.rs  commit.rs  config.rs  fetch.rs  init.rs  mod.rs  refs.rs  remote.rs  remote_add.rs  switch.rs  worktree.rs
src/online/: file_registry.rs  github_registry.rs  gitignore.rs  mod.rs  registry.rs
src/search/: mod.rs  v1.rs  v2.rs
src/tasks/: create_remote.rs  ensure_no_remote.rs  fork_remote.rs  fork_repo.rs  git_add.rs  git_branch_delete.rs  git_checkout.rs  git_clone.rs  git_commit.rs  git_init.rs  git_move_upstream.rs  git_remote.rs  git_switch.rs  git_worktree.rs  git_worktree_remove.rs  mod.rs  (+5 more)
test/: coverage.ps1  files.go
(+123 files in other folders)
