[package]
name = "git-tool"
version = "3.6.0"
authors = [
  "Benjamin Pannell <benjamin@pannell.dev>",
  "Aideen Fay <me@aideen.dev>",
]
edition = "2021"

[[bin]]
name = "git-tool"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4.38" }
clap = { version = "4.5.18", features = ["cargo", "env", "string"] }
directories-next = "2.0"
futures = "0.3"
gtmpl = "0.7"
human-errors = "0.1.3"
http = "0.2"
inventory = "0.3.15"
itertools = "0.13"
keyring = { version = "3.3.0", optional = true }
lazy_static = "1.5"
nix = { version = "0.29.0", features = ["process", "signal"] }
once_cell = "1.20"
rpassword = { version = "7.3", optional = true }
reqwest = { version = "0.12.7", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
tokio = { version = "1.40", features = [
  "rt",
  "time",
  "fs",
  "process",
  "macros",
  "signal",
] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git" }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

[dev-dependencies]
mockall = "0.13.0"
tempfile = "3.13"
sentry = { version = "0.34", default-features = false, features = [
  "reqwest",
  "rustls",
  "log",
  "test",
] }

[features]
default = ["auth"]
auth = ["keyring", "rpassword"]

# This feature disables tests which access the network, system secret store,
# or portions of the filesystem OTHER than the $TMP directory.
#
# We explicitly permit access to $TMP to permit validation of a range
# of behaviours which are otherwise extremely costly to mock and subject
# to complex failure modes.
pure-tests = []

[profile.release]
debug = true
