[package]
name = "git-tool"
version = "3.7.0"
authors = [
    "Benjamin Pannell <benjamin@pannell.dev>",
    "Aideen Fay <me@aideen.dev>",
]
edition = "2021"

[[bin]]
name = "git-tool"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4.40" }
clap = { version = "4.5.34", features = ["cargo", "env", "string"] }
directories-next = "2.0"
futures = "0.3"
gtmpl = "0.7"
http = "0.2"
human-errors = "0.1.5"
inventory = "0.3.20"
itertools = "0.14"
keyring = { version = "3.6.2", optional = true }
lazy_static = "1.5"
nix = { version = "0.29.0", features = ["process", "signal"] }
rpassword = { version = "7.3", optional = true }
reqwest = { version = "0.11.27", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
tempfile = "3.19"
tokio = { version = "1.44", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "process",
    "macros",
    "signal",
] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git" }

[dev-dependencies]
mockall = "0.13.1"
sentry = { version = "0.36", default-features = false, features = [
    "reqwest",
    "rustls",
    "log",
    "test",
] }

[features]
default = ["auth"]
auth = ["keyring", "rpassword"]

# This feature disables tests which access the network, system secret store,
# or portions of the filesystem OTHER than the $TMP directory.
#
# We explicitly permit access to $TMP to permit validation of a range
# of behaviours which are otherwise extremely costly to mock and subject
# to complex failure modes.
pure-tests = []

[profile.release]
debug = true
