[package]
name = "git-tool"
version = "3.10.0"
authors = [
    "Benjamin Pannell <benjamin@pannell.dev>",
    "Aideen Fay <me@aideen.dev>",
]
edition = "2024"

[[bin]]
name = "git-tool"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4.41" }
clap = { version = "4.5.53", features = ["cargo", "env", "string"] }
directories-next = "2.0"
futures = "0.3"
gtmpl = "0.7"
http = "1.3"
human-errors = "0.1.5"
inventory = "0.3.21"
itertools = "0.14"
keyring = { version = "3.6.3", optional = true, features = ["apple-native", "windows-native", "sync-secret-service"] }
lazy_static = "1.5"
nix = { version = "0.30.1", features = ["process", "signal"] }
rpassword = { version = "7.4", optional = true }
reqwest = { version = "0.11.27", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1"
tempfile = "3.24"
tokio = { version = "1.48", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "process",
    "macros",
    "signal",
] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["medama", "opentelemetry", "sentry"] }
dirs = "6.0.0"
shellexpand = "3"

[dev-dependencies]
mockall = "0.14.0"
rstest = "0.26"
sentry = { version = "0.46", default-features = false, features = [
    "reqwest",
    "rustls",
    "log",
    "test",
] }

[features]
default = ["auth", "telemetry"]
auth = ["keyring", "rpassword"]
telemetry = []

# This feature disables tests which access the network, system secret store,
# or portions of the filesystem OTHER than the $TMP directory.
#
# We explicitly permit access to $TMP to permit validation of a range
# of behaviours which are otherwise extremely costly to mock and subject
# to complex failure modes.
pure-tests = []

[profile.release]
debug = true
